# 23_django_orm_practice_and_deploy

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  library_fixture.json  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
nginx/: nginx.conf
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
