[tool.poetry]
name = "23-django-orm-practice "
version = "0.1.0"
description = ""
authors = ["Dmitry Minin <d.n.minin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
psycopg2-binary = "^2.9.10"
dotenv = "^0.9.9"
python-dotenv = "^1.1.0"
ipython = "^9.0.2"
pillow = "^11.2.1"
redis = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
